--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/জামিয়া_ইসলামিয়া_মোমেনশাহীর_লোগো.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>madrasa-web-app</title>
   </head>
